--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
     </nav>
 
     <!-- Header -->
-<!--     <header>
+    <header>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </div>
-    </header> -->
+    </header>
 <!--
         {% for page in site.pages %}
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
