--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 
     {% include header.html %}
     {% include portfolio_grid.html %}
+    {% include maps_grid.html %}
     {% include about.html %}
     {% include footer.html %}
     {% include modals.html %}
