--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#webdev">Web Development</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#maps">Maps</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
