--- a/_includes/maps_grid.html
+++ b/_includes/maps_grid.html
@@ -9,15 +9,15 @@
                 </div>
             </div>
             <div class="row">
-                {% for post in site.posts %}
+                {% for map in site.maps %}
                     <div class="col-sm-3 portfolio-item">
-                        <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                        <a href="#portfolioModal-{{ map.modal-id }}" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
                                     <i class="fa fa-search-plus fa-3x"></i>
                                 </div>
                             </div>
-                            <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
+                            <img src="img/maps/{{ map.img }}" class="img-responsive" alt="{{ map.alt }}">
                         </a>
                     </div>
                 {% endfor %}
