--- a/_includes/maps_grid.html
+++ b/_includes/maps_grid.html
@@ -1,23 +1,23 @@
 
     <!-- Portfolio Grid Section -->
-    <section id="maps">
+    <section id="webdev">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Cartography</h2>
+                    <h2>Web Development</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                {% for map in site.maps %}
+                {% for post in site.maps %}
                     <div class="col-sm-3 portfolio-item">
-                        <a href="#portfolioModal-{{ map.modal-id }}" class="portfolio-link" data-toggle="modal">
+                        <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
                                     <i class="fa fa-search-plus fa-3x"></i>
                                 </div>
                             </div>
-                            <img src="img/maps/{{ map.img }}" class="img-responsive" alt="{{ map.alt }}">
+                            <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
                         </a>
                     </div>
                 {% endfor %}
