--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,23 +1,20 @@
  <!-- About Section -->
     <section class="success" id="about">
         <div class="container">
+
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
                     <hr class="star-light">
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>The North America Region Science Team is funded primarily on soft money, and is built to provide flexible capacity for evolving regional and global priorities. </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                    <p>In addition to providing science and data management for the organization, we develop web mapping tools and websites, cartography, and data visualization.</p>
                 </div>
             </div>
         </div>
