--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,12 +8,26 @@
 
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-    <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "style.css" | prepend: site.baseurl }}">
 
     <!-- Custom Fonts -->
-    <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <script src="{{ "js/jquery-1.11.0.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "js/jquery.lazyload.min.js" | prepend: site.baseurl }}"></script>
+
+    <script type="text/javascript">
+        // Lazy load images
+      $(function() {
+         $("img.lazy").lazyload({
+             effect : "fadeIn",
+             threshold: 200
+         });
+
+      });
+    </script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
