--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,11 +39,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                   <!--  <i class="fa fa-globe"></i> -->
+                    <i class="fa fa-map-marker"></i>
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
                         <span class="skills">Web Maps &amp; Tools - Cartography - Data Visualization</span>
+                        
                     </div>
                 </div>
             </div>
