--- a/_includes/maps_grid.html
+++ b/_includes/maps_grid.html
@@ -1,26 +1,65 @@
 
     <!-- Portfolio Grid Section -->
-    <section id="webdev">
+    <section id="maps">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Web Development</h2>
+                    <h2>Cartography</h2>
                     <hr class="star-primary">
                 </div>
             </div>
+
             <div class="row">
-                {% for post in site.maps %}
-                    <div class="col-sm-3 portfolio-item">
-                        <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
+                {% for post in site.posts %}
+                    {% if post.categories contains 'maps landscape arct' %}                
+                        <div class="col-sm-3 portfolio-item">
+                            <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                                <div class="caption">
+                                    <div class="caption-content">
+                                        <i class="fa fa-search-plus fa-3x"></i>
+                                    </div>
                                 </div>
-                            </div>
-                            <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
-                        </a>
-                    </div>
+                                <img data-original="img/{{ post.img }}" class="img-responsive lazy" alt="{{ post.alt }}">
+                            </a>
+                        </div>
+                    {% endif %}                   
                 {% endfor %}
             </div>
+
+            <div class="row">
+                {% for post in site.posts %}
+                    {% if post.categories contains 'maps landscape' %}                
+                        <div class="col-sm-3 portfolio-item">
+                            <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                                <div class="caption">
+                                    <div class="caption-content">
+                                        <i class="fa fa-search-plus fa-3x"></i>
+                                    </div>
+                                </div>
+                                <img data-original="img/{{ post.img }}" class="img-responsive lazy" alt="{{ post.alt }}">
+                            </a>
+                        </div>
+                    {% endif %}                   
+                {% endfor %}
+            </div>
+
+            <div class="row">
+                {% for post in site.posts %}
+                    {% if post.categories contains 'maps portrait' %}                
+                        <div class="col-sm-3 portfolio-item">
+                            <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                                <div class="caption">
+                                    <div class="caption-content">
+                                        <i class="fa fa-search-plus fa-3x"></i>
+                                    </div>
+                                </div>
+                                <img data-original="img/{{ post.img }}" class="img-responsive lazy" alt="{{ post.alt }}">
+                            </a>
+                        </div>
+                    {% endif %}                   
+                {% endfor %}
+            </div>
+
         </div>
+
     </section>
