--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -14,7 +14,7 @@
                         <div class="modal-body">
                             <h2>{{ post.alt }}</h2>
                             <hr class="star-primary">
-                            <img src="img/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+                            <img data-original="img/{{ post.img }}" class="img-responsive img-centered lazy" alt="{{ post.alt }}">
                             <p>{{ post.description }}</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
