--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,7 @@
                             <li>Brad McRae</li>
                             <li>Casey Schneebeck</li>
                             <li>Dan Majka</li>
+                            <li>Dave Mehlman</li>
                             <li>Jan Slaats</li>
                             <li>Jim Platt</li>                                                                                                                
                         </ul>
