--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
-    <script src="{{ "js/jquery-1.11.0.js" | prepend: site.baseurl }}"></script>
+    <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="{{ "js/jquery.lazyload.min.js" | prepend: site.baseurl }}"></script>
 
     <script type="text/javascript">
