--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,5 +1,5 @@
- <!-- jQuery Version 1.11.0 -->
-    <script src="{{ "js/jquery-1.11.0.js" | prepend: site.baseurl }}"></script>
+ <!-- jQuery Version 1.11.0 
+    <script src="{{ "js/jquery-1.11.0.js" | prepend: site.baseurl }}"></script> -->
 
     <!-- Bootstrap Core JavaScript -->
     <script src="{{ "js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
@@ -12,5 +12,16 @@
     <!-- Custom Theme JavaScript -->
     <script src="{{ "js/freelancer.js" | prepend: site.baseurl }}"></script>
 
-    <!-- Lazy load images -->
-    <script src="{{ "js/jquery.lazyload.min.js" | prepend: site.baseurl }}"></script>
+    <!-- Lazy load images 
+    <script src="{{ "js/jquery.lazyload.min.js" | prepend: site.baseurl }}"></script> -->
+
+    <!-- Google analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-59444637-1', 'auto');
+      ga('send', 'pageview');
+    </script>
